# captainstat

./: .env-dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: data.rs  errors.rs  main.rs
cli/src/model/: comment.rs  mod.rs  source.rs  speaker.rs  statement.rs  user.rs  video.rs
sql/: structure.sql
src/: data.rs  errors.rs  main.rs
src/model/: mod.rs  source.rs  speaker.rs  video.rs
web/: Cargo.toml  package.json
web/sql/: search_speakers.sql  search_videos.sql  speakers.sql  structure.sql  videos.sql
web/src/: entities.rs  errors.rs  main.rs
web/static/: main.css
web/templates/: base.html  index.html  list.html  macros.html  speakers.html  videos.html
web/templates/errors/: 404.html  500.html
