[package]
name = "captainstat"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.attohttpc]
version = "0.16"
features = ["json"]
