[package]
name = "captainstat"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tungstenite = "0.11"

[dependencies.attohttpc]
version = "0.16"
features = ["json"]

[dependencies.elephantry]
version = "1.3"
features = ["date"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
