[package]
name = "captainstat-cli"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.attohttpc]
version = "0.20"
features = ["json"]

[dependencies.clap]
version = "3.0"
features = ["derive"]

[dependencies.elephantry]
version = "3.0"
features = ["date"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tungstenite]
version = "0.17"
features = ["native-tls"]
