[package]
name = "captainstat-cli"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true

[dependencies.attohttpc]
version = "0.25"
features = ["json"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.elephantry]
workspace = true
features = ["date"]

[dependencies.tungstenite]
version = "0.18"
features = ["native-tls"]
