[package]
name = "captainstat-web"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
tera = "1.5"
tera-hot = "0.4"
thiserror = "1.0"

[dependencies.elephantry]
version = "3.0"
features = ["serde"]

[dependencies.elephantry-extras]
version = "0.4"
features = ["tera-pager"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
