[package]
name = "captainstat-web"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
envir.workspace = true
log.workspace = true
serde.workspace = true
tera = "1.5"
tera-hot = "0.4"
thiserror.workspace = true

[dependencies.elephantry]
workspace = true
features = ["serde"]

[dependencies.elephantry-extras]
version = "0.5"
features = ["tera-pager"]
