[package]
name = "captainstat-web"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition.workspace = true

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
envir.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

[dependencies.elephantry]
workspace = true
features = ["serde"]

[dependencies.elephantry-extras]
version = "0.11"
features = ["tera-pager"]

[dependencies.tera]
version = "2.0"
features = ["glob_fs"]
